[ADD] enno dashboard routes
