# app/controller/kpiController.js
@@ -18,13 +18,20 @@ exports.Kpi = async (req, res) => {
     });
     res.status(200).json({
       description: "KPIs",
+      emulator_serial: kpi[0].emulator_serial,
       cum_conso_pred: kpi[0].cum_conso_pred,
       cum_conso_measured: kpi[0].cum_conso_measured,
       co2_savings: kpi[0].co2_savings,
       financial_savings: kpi[0].financial_savings,
       idc: kpi[0].idc,
       opti: kpi[0].opti,
-      emulator_serial: kpi[0].emulator_serial
+      energy_savings: kpi[0].energy_savings,
+      performance: kpi[0].performance,
+      intercept_ref: kpi[0].intercept_ref,
+      slope_ref: kpi[0].slope_ref,
+      intercept_opti: kpi[0].intercept_opti,
+      slope_opti: kpi[0].slope_opti,
+      last_updated: kpi[0].last_updated
     });
   } catch (error) {
     console.log(error);
